--- a/g.index.html
+++ b/g.index.html
@@ -4,7 +4,7 @@ const html404 = `<!DOCTYPE html>
   <p>The url you visit is not found.</p>
 </body>`
 
-const statichtml = "https://xiaohan17.oss-cn-hangzhou.aliyuncs.com/xiaohan-Shorten-URL.html"
+/**const statichtml = "https://xiaohan17.oss-cn-hangzhou.aliyuncs.com/xiaohan-Shorten-URL.html"**/
 
 
 async function randomString (len) {
