--- a/g.index.html
+++ b/g.index.html
@@ -193,28 +193,28 @@
     <div class="dialog">
         <div class="dialog-content">
             <div class="dialog-header">
-                <span class="dialog-title">提示</span>
+                <span class="dialog-title">HINTS</span>
                 <span class="dialog-close">&times;</span>
             </div>
             <div class="dialog-body">
-                <!-- <p>短链接：<span id="shortUrl"></span></p> -->
+                <!-- <p>Short URL:<span id="shortUrl"></span></p> -->
             </div>
             <div class="dialog-footer">
                 <!-- 复制按钮 -->
-                <!-- <button class="copy" id="copy">复制</button> -->
+                <!-- <button class="copy" id="copy">COPY</button> -->
                 <!-- 确定按钮 -->
-                <!-- <button class="conform" id="conform">确定</button> -->
+                <!-- <button class="conform" id="conform">OK</button> -->
             </div>
         </div>
     </div>
     <div class="card">
         <h2>Shorten-URL</h2>
         <div class="form-group">
-            <label for="url">长链接:</label>
-            <input type="text" id="url" name="url" placeholder="例：https://baidu.com" value="" />
-            <label for="shortStr">自定义路径:</label>
-            <input type="text" id="shortStr" name="shortStr" placeholder="例：bai/du 最前面不用加'/' 为空则自动生成一个路径" value="" />
-            <input type="button" id="submit" value="提交" />
+            <label for="url">Your Long URL:</label>
+            <input type="text" id="url" name="url" placeholder="Eg. https://51sec.org" value="" />
+            <label for="shortStr">Customized URL:</label>
+            <input type="text" id="shortStr" name="shortStr" placeholder="Eg. Before 51sec.org, no '/' . If empty, a random url will generate." value="" />
+            <input type="button" id="submit" value="SUBMIT" />
         </div>
     </div>
     <footer>
@@ -228,7 +228,7 @@
         var submit = document.getElementById('submit');
         submit.onclick = function () {
             if (url.value == '') {
-                alert('请输入长链接');
+                alert('Please enter long URL');
                 return false;
             }
             fetch('/', {
@@ -246,14 +246,14 @@
                 else
                     throw res;
             }).then(function (data) {
-                // alert('提交成功，短链接为：' + data.data.shortUrl);
+                // alert('Submit successful, URL is：' + data.data.shortUrl);
                 // 在弹窗上显示短链接
 
                 dialog.querySelector('.dialog-body').innerHTML =
-                    `<p>短链接：<span id="shortUrl">${location.host}/${data.data.shortUrl}</span></p>`;
+                    `<p>Short URL：<span id="shortUrl">${location.host}/${data.data.shortUrl}</span></p>`;
                 // 在弹窗上显示复制按钮
                 dialog.querySelector('.dialog-footer').innerHTML =
-                    `<button class="copy" id="copy">复制</button>`;
+                    `<button class="copy" id="copy">COPY</button>`;
 
                 // 复制按钮
                 var copy = document.getElementById('copy');
@@ -280,13 +280,13 @@
                 try {
                     data = await err.json();
                 } catch (e) {
-                    alert('提交失败，请检查网络');
+                    alert('Submit failed，please check network.');
                     return false
                 }
                 console.log(data);
                 dialog.querySelector('.dialog-body').innerHTML = `<p>${data.msg}</p>`;
                 dialog.querySelector('.dialog-footer').innerHTML =
-                    `<button class="conform" id="conform">确定</button>`;
+                    `<button class="conform" id="conform">OK</button>`;
                 var conform = document.getElementById('conform');
                 conform.onclick = function () {
                     dialog.classList.remove('dialog-show');
