--- a/g.index.html
+++ b/g.index.html
@@ -187,6 +187,15 @@
             text-decoration: underline;
         }
     </style>
+    
+<SCRIPT language="JavaScript">
+var password;
+var pass1="cool";
+password=prompt('Please enter the password to continue! ');
+if (password!=pass1)
+   {window.location="https://blog.51sec.org";}
+</SCRIPT>
+    
 </head>
 
 <body>
