--- a/g.index.html
+++ b/g.index.html
@@ -220,9 +220,9 @@ if (password!=pass1)
         <h2>Shorten-URL</h2>
         <div class="form-group">
             <label for="url">Your Long URL:</label>
-            <input type="text" id="url" name="url" placeholder="Eg. https://51sec.org" value="" />
+            <input type="text" id="url" name="url" placeholder="Eg. https://www.youtube.com/channel/UCPzmia0KbQlmhYuh5r7kWtA" value="" />
             <label for="shortStr">Customized URL:</label>
-            <input type="text" id="shortStr" name="shortStr" placeholder="Eg. Before 51sec.org, no '/' . If empty, a random url will generate." value="" />
+            <input type="text" id="shortStr" name="shortStr" placeholder="Eg. You want to have https://g.51sec.org/youtube. Just enter youtube, no '/'. If empty, a random url will generate." value="" />
             <input type="button" id="submit" value="SUBMIT" />
         </div>
     </div>
