--- a/g.index.html
+++ b/g.index.html
@@ -222,7 +222,7 @@ if (password!=pass1)
             <label for="url">Your Long URL:</label>
             <input type="text" id="url" name="url" placeholder="Eg. https://www.youtube.com/channel/UCPzmia0KbQlmhYuh5r7kWtA" value="" />
             <label for="shortStr">Customized URL:</label>
-            <input type="text" id="shortStr" name="shortStr" placeholder="Eg. You want to have https://g.51sec.org/youtube. Just enter youtube, no '/'. If empty, a random url will generate." value="" />
+            <input type="text" id="shortStr" name="shortStr" placeholder="Eg. For https://g.51sec.org/youtube. Just enter youtube here, no '/'. If empty, a random url will generate." value="" />
             <input type="button" id="submit" value="SUBMIT" />
         </div>
     </div>
